--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ html, body{
         padding: 1rem;
         border-bottom: 1px solid var(--color-border);
     }
+
     .modal__title {
         font-size: 1.25rem;
         font-weight: 600;
@@ -179,9 +180,11 @@ html, body{
         padding: 0;
         line-height: 1;
     }
+
     .modal__content {
         padding: 1rem;
     }
+
     .modal__footer {
         display: flex;
         justify-content: flex-end;
@@ -189,3 +192,26 @@ html, body{
         padding: 1rem;
         border-top: 1px solid var(--color-border);
     }
+
+/*Block: form*/
+.form__group {
+    margin-bottom: 1rem;
+}
+
+.form__label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+}
+
+.form__input {
+    width: 100%;
+    padding: 8px 12px;
+    border: 1px solid var(--color-border);
+    border-radius: var(--radius-main);
+    font-size: 1rem;
+}
+
+.form__input:read-only{
+    background-color: var(--color-background);
+}
